# VisiSkin-Agent

./: .gitignore  CLAUDE.md  WORKLOG.md
.claude/commands/: run-experiment.md
data/: expert_qc_labels.csv
project/: README.md  pyproject.toml
project/configs/: default.yaml  qad_stdvib_ft.yaml
project/data/: auto_label.py  dataset.py  degrade.py  download.py  verify_pipeline.py  visualize.py
project/plans/: 00_overview.md  phase_01_setup.md  phase_02_data.md  phase_03_visiscore.md  phase_04_qad.md  phase_05_agent.md  phase_06_benchmark.md  phase_07_paper.md
project/results/: itb_predictions.csv
project/tests/: test_data_pipeline.py  test_smoke.py
